fix: teamcontent and spacings

--- a/src/components/private/timeline/Timeline.scss
+++ b/src/components/private/timeline/Timeline.scss
@@ -99,7 +99,7 @@
   }
 
   .letters {
-    width: 50%;
+    width: 45%;
     opacity: 0.7;
     right: 9rem;
     top: 6rem;
